app/assets/stylesheets/survey.css.scss
.survey {
  .welcome {
    text-align: center;
  }
  table.welcome {
    width: 245px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
  }

  .form-questions {
    margin-top: 60px;
  }

  .question {
    display: none;
  }

  .on {
    display: block;
  }

  h3, h4 {
    color: #8C8C8C;
  }

  input[type="radio"] {
    display: none;
  }

  .buttons {
    margin-top: 30px;
  }

  .btn-lg {
    padding: 18px 28px;
    font-size: 22px;
    line-height: normal;
    -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    border-radius: 8px;
  }

  .btn-yes, .btn-no {
    border: solid 1px;
  }

  .btn-yes.active {
    background-color: #5CB85C;
  }

  .btn-no.active {
    background-color: #ee9999;
  }

  .btn-continue {
    color: #333333;
    margin-top: 40px;
  }

  .button-block {
    display: none;
  }

  a:hover, a:visited, a:link, a:active {
    text-decoration: none;
  }

  .text-input-legend {
    font-size: .6em;
    position: absolute;
    color: #999999;
    margin-left: 34px;
    margin-top: -2px;
  }

  .why, .general-feedback {
    margin-top: 20px;
    width: 300px;
    border: 0;
    border-radius: 0;
    -webkit-border-radius: 0;
    resize: none;
    font-size: 1.5em;
    line-height: 1.5em;
    -webkit-box-shadow: none !important;
    -moz-box-shadow: none !important;
    box-shadow: none !important;
    outline: none;
    border-left: 2px solid #cccccc;
    color: #999999;
    overflow: hidden;
  }

  .why {
    display: none;
    &.yes {
      border-left: 2px solid #5CB85C !important;
      color: #5CB85C;
    }
    &.no {
      border-left: 2px solid #ee9999 !important;
      color: #ee9999;
    }
  }

  .hotkey {
    font-size: 11px;
    color: #8D8D8D;
  }

  .progress {
    width: 200px;
    margin-left: auto;
    margin-right: auto;
  }

  .back-link {
    text-align: center;
    font-size: .7em;
    margin-bottom: 2px;
    .back-esc {
      font-size: 1.2em;
      color: #8D8D8D;
      border: solid 1px;
      -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
      border-radius: 3px;
      padding-left: 3px;
      padding-right: 3px;
      padding-bottom: 1px;
      margin-left: 2px;
    }
  }
}
.survey-finished {
  text-align: center;
  img {
    margin-left: auto;
    margin-right: auto;
  }
}

